fixed some mobile alignments added dropdown for services

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@
 		font-size: 100%;
 		font: inherit;
 		vertical-align: baseline;
+		color: #5f3b14;
 	}
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -2789,6 +2790,96 @@
 
 		/*services*/
 
+		/*collapsible*/
+
+			#red_faq {
+				display: inline-block;
+				background-color: #d12229;
+				opacity: .8;
+				width: 100%;
+				height: 35vw;
+				margin-top: 11.75%;
+			}
+
+			#red_faq p {
+				font-size: 2.5vw;
+				font-family: "Spectral", serif;
+				color: #fff;
+				float: right;
+				padding: 20% 5% 0 0;
+			}
+
+			.collapsible {
+				background-color: #fff;
+				width: 100%;
+				display: inline-block;
+				align-content: center;
+				padding: 0;
+				margin: 0;
+				margin-top: -.25%;
+			}
+
+			.collapsible h1 {
+				font-size: 2.5vw;
+				color: #fff !important;
+				font-family: 'Quicksand', sans-serif !important;
+				display: inline-block;
+				/*float: middle;*/
+				padding-left: 10%;
+				font-family: "Spectral", serif;
+			}
+
+			i.material-icons {
+				opacity: 0;
+			}
+
+			.collapsible li {
+				list-style: none;
+			}
+
+			.collapsible-header {
+				height: 8vw;
+				border-bottom: solid #fff;
+				border-radius: 20px;
+				cursor: pointer;
+			}
+
+			#odd {
+				background-color: #f05848;
+				width: 100%;
+			}
+
+			#even {
+				background-color: #f05848;
+				width: 100%;
+			}
+
+			.collapsible-body {
+				background-color: #fff;
+				text-align: left;
+				padding-left: 5%;
+				padding-right: 5.5%;
+				padding-bottom: 2%
+			}
+
+			.collapsible-body p {
+				font-size: 1.5vw;
+				font-family: "Raleway", sans-serif;
+				line-height: 2vw;
+			}
+
+			.collapsible-body a {
+				text-decoration: none;
+				color: #ed1c24;
+			}
+
+			.tuition_headers {
+				padding-top: 2%;
+			  color: red;
+			  font-size: 2vw;
+			  font-family: "Spectral", serif;
+			}
+
 		#second .services {
 			width: 100%;
 			display: inline-block;
@@ -2796,27 +2887,33 @@
 			font-size: 2.5vw;
 			font-family: 'Quicksand', sans-serif;
 			font-weight: lighter;
-			padding-top: 3%;
-			height: 50vw;
+			height: 100%;
 			margin: auto;
 			text-align: center;
 		}
 
 		.services h2 {
+			padding-top: 8%;
 			text-align: center;
 			font-size: 2.5vw;
 			font-family: 'Quicksand', sans-serif;
 			width: 100%;
 		}
 
-		.services h5 {
+		.services h4 {
+			padding-bottom: 5%;
+		}
+
+		.services h6 {
+			float: left;
+			padding-left: 3%;
 			font-size: 2.4vw;
 			font-family: 'Quicksand', sans-serif;
 		}
 		.services .sites {
 			display: inline-block;
 			width: 50%;
-			padding-top: 10%;
+			padding-top: 5%;
 			padding-bottom: 10%;
 			padding-left: 14%;
 			text-align: left;
@@ -3904,6 +4001,20 @@
 			margin-left: 2em;
 		}
 
+		#footer .home-copyright {
+			width: 100%;
+			margin: 2.5em 0 2em 0;
+			font-size: 1.2vw;
+			font-family: 'Quicksand', serif;
+			color: #5f3b14;
+			text-align: center;
+			background-color: #ffffff;
+			height: 5vw;
+			border: #ffffff;
+			border-radius: 4px;
+			padding-top: 1.5%;			
+		}
+
 		#footer .copyright {
 			width: 100%;
 			margin: 2.5em 0 2em 0;
@@ -3920,8 +4031,27 @@
 
 		@media screen and (max-width: 1280px) {
 
+			#home-header img {
+				width: 100%;
+				padding-bottom: -25%;
+			}
+
 			#footer {
 				padding: 0 0 2em 0 ;
+			}
+
+			#footer .home-copyright {
+				width: 100%;
+				margin: 2.5em 0 2em 0;
+				font-size: 1.2vw;
+				font-family: 'Quicksand', serif;
+				color: #5f3b14;
+				text-align: center;
+				background-color: #ffffff;
+				height: 5vw;
+				border: #ffffff;
+				border-radius: 4px;	
+				padding-top: 1.5%;		
 			}
 
 			#footer .copyright {
@@ -3942,6 +4072,11 @@
 
 		@media screen and (max-width: 980px) {
 
+			#home-header img {
+				width: 100%;
+				padding-bottom: -25%;
+			}
+
 			#footer {
 				padding: 0 0 2em 0 ;
 				display: block;
@@ -3953,6 +4088,20 @@
 					width: 100%;
 					margin-left: 0;
 					margin-bottom: 3em;
+				}
+
+				#footer .home-copyright {
+					width: 100%;
+					margin: -6% 0 2em 0;
+					font-size: 1.2vw;
+					font-family: 'Quicksand', serif;
+					color: #5f3b14;
+					text-align: center;
+					background-color: #ffffff;
+					height: 5vw;
+					border: #ffffff;
+					border-radius: 4px;		
+					padding-top: 1.5%;	
 				}
 
 				#footer .copyright {
@@ -3973,8 +4122,27 @@
 
 		@media screen and (max-width: 736px) {
 
+			#home-header img {
+				width: 100%;
+				padding-bottom: -25%;
+			}
+
 			#footer {
 				padding: 0 0 1em 0 ;
+			}
+
+			#footer .home-copyright {
+				width: 100%;
+				margin: -6% 0 2em 0;
+				font-size: 1.2vw;
+				font-family: 'Quicksand', serif;
+				color: #5f3b14;
+				text-align: center;
+				background-color: #ffffff;
+				height: 5vw;
+				border: #ffffff;
+				border-radius: 4px;	
+				padding-top: 1.5%;		
 			}
 
 			#footer .copyright {
@@ -3993,10 +4161,29 @@
 
 		}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 550px) {
+
+			#home-header img {
+				width: 100%;
+				padding-bottom: -25%;
+			}
 
 			#footer {
 				padding: 0 0 1em 0 ;
+			}
+
+			#footer .home-copyright {
+				width: 100%;
+				margin: -8% 0 2em 0;
+				font-size: 1.2vw;
+				font-family: 'Quicksand', serif;
+				color: #5f3b14;
+				text-align: center;
+				background-color: #ffffff;
+				height: 5vw;
+				border: #ffffff;
+				border-radius: 4px;	
+				padding-top: 1.5%;		
 			}
 			#footer .copyright {
 			width: 100%;
@@ -4009,16 +4196,35 @@
 			height: 5vw;
 			border: #ffffff;
 			border-radius: 4px;
-			padding-top: 1.5%;
 		}
 
 		}
 
 		@media screen and (max-width: 480px) {
+
+			#home-header img {
+				width: 100%;
+				padding-bottom: -25%;
+			}
 
 			#footer {
 				padding: 0 0 0.5em 10 ;
 			}
+
+			#footer .home-copyright {
+				width: 100%;
+				margin: -6% 0 2em 0;
+				font-size: 1.2vw;
+				font-family: 'Quicksand', serif;
+				color: #5f3b14;
+				text-align: center;
+				background-color: #ffffff;
+				height: 5vw;
+				border: #ffffff;
+				border-radius: 4px;
+				padding-top: 1.5%;			
+			}
+
 			#footer .copyright {
 			width: 100%;
 			margin: 2.5em 0 2em 0;
@@ -4030,7 +4236,6 @@
 			height: 5vw;
 			border: #ffffff;
 			border-radius: 4px;
-			padding-top: 1.5%;
 		}
 
 		}
